Muestra datos en consola, falta pintarlos en web y añadir estilos

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <script src="index.js" type="module"></script>
 </head>
 <body>
-
+  <h1 class="tittle-page">KoaFlix</h1>
+  <p>Tu web cinematográfica de confianza</p>
+  <div class="card"></div>
 </body>
 </html>
